  also ceilf(large_bar_height * si);
  also avoid distributive multiplication with floats to lessen chances of
  platform variation (#204 ARM-Cortex crash)
- common/emf/output/raster/vector.c: use new stripf() func to workaround
  float variations
- raster.c: Don't add height offset for text if scale < 1.0 (as won't print)
- ISBNX: fix not returning error number (warning) correctly


Version 2.10.0 2021-08-14
=========================

**Incompatible changes**
------------------------
- Add halign (horizontal align) to struct zint_vector_string
  NOTE: backward incompatible text drawing for UPC/EAN
- Change height and row_height array to floats
  NOTE: may cause changes in heights

Changes
-------
- Move project history/version from manual.txt and backend/README into this file
- Command line switches -d or -i for code data may now be at any position.
- Add rotation for vector formats
- Change double to float for performance in many internal places
- Ticket 197: optimize raster scaling for 0.5 substeps;
  ignore raster scaling < 0.5 as pixels lost.
- Ticket 197: add output option to bypass time-intensive buffer_plot()
  (OUT_BUFFER_INTERMEDIATE)
- Reduce BMP size by using 1 bit per pixel (except Ultracode)
- New warn_level field, WARN_FAIL_ALL
- Add GS1NOCHECK_MODE to input_mode (note was ZPL compatibility mode
  WARN_ZPL_COMPAT to warn_level)
- Remove version info from zint.h and put in zintconfig.h via zintconfig.h.in
- Add ZBarcode_Cap()
- Add GUI symbology filter, separate settings for each symbology
- Require cmake 3.5, use PNG::PNG and add Qt6 build option
- Make library fully stack-based so reentrant apart from file operations
- Performance improvements (large data) for AZTEC/HANXIN/GRIDMATRIX/PDF417/QR
- Option scmvv for MaxiCode #212; postcode needn't be space-filled
- eci: Add support for all ECIs (Big5, Korean, UCS-2BE)
- CLI: Handle UTF-8 args on Windows; -b <barcode name>
- DATAMATRIX: make EOD encodation strictly ISO 16022 compliant